Atualização de arquivos Changelog, Readme.md

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.unipe.java</groupId>
 	<artifactId>web</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.3/version>
 	<packaging>war</packaging>
-	<name>Projeto Java Web 2019.1</name>
+	<name>Projeto Java Web</name>
 	<description>Projeto utilizado aprendizado de conceitos básicos 
 	em disciplinas e cursos de desenvolvimento para web</description>
 	<url>http://maven.apache.org</url>
