--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.unipe.java</groupId>
 	<artifactId>web</artifactId>
-	<version>0.0.3/version>
+	<version>0.0.2</version>
 	<packaging>war</packaging>
 	<name>Projeto Java Web</name>
 	<description>Projeto utilizado aprendizado de conceitos básicos 
